--- a/Examenes/E_1_Circuito_RL.ipynb
+++ b/Examenes/E_1_Circuito_RL.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "id": "9da10743",
    "metadata": {},
    "outputs": [],
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "id": "a70ead0a",
    "metadata": {},
    "outputs": [
@@ -85,7 +85,7 @@
        "Text(0.5, 1.0, 'Respuesta de Corriente en Circuito RL para DiferentesInductancias')"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -139,6 +139,25 @@
     "plt.title('Respuesta de Corriente en Circuito RL para DiferentesInductancias')\n",
     "# En Jupyter Notebook no es estrictamente necesario plt.show() al final de la celda\n",
     "# La gráfica se renderizará automáticamente"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "021b2f55",
+   "metadata": {},
+   "source": [
+    "- Conclusiones de la simulación.\n",
+    "Al ejecutar el código, se puede observar en la gráfica que a medida que\n",
+    "**aumenta la inductancia (L)**:\n",
+    "\n",
+    "* La **amplitud de la corriente disminuye**. Esto se debe a que una\n",
+    "mayor inductancia genera una mayor reactancia inductiva ($X_L = \\omega L$),\n",
+    "lo que aumenta la impedancia total del circuito y limita el paso de la\n",
+    "corriente.\n",
+    "* El **desfase de la corriente aumenta**. La onda de corriente se atrasa\n",
+    "cada vez más con respecto a la onda de voltaje, un efecto característico de\n",
+    "los circuitos inductivos. Esto se ve en la tabla de resultados, donde el\n",
+    "ángulo de desfase es mayor para inductancias más grandes."
    ]
   }
  ],
