Desarrollo de la parte práctica del examen

--- a/Examenes/E_1_Circuito_RL.ipynb
+++ b/Examenes/E_1_Circuito_RL.ipynb
@@ -157,7 +157,7 @@
     "* El **desfase de la corriente aumenta**. La onda de corriente se atrasa\n",
     "cada vez más con respecto a la onda de voltaje, un efecto característico de\n",
     "los circuitos inductivos. Esto se ve en la tabla de resultados, donde el\n",
-    "ángulo de desfase es mayor para inductancias más grandes."
+    "ángulo de desfase es mayor para inductancias más grandes"
    ]
   }
  ],
