--- a/practicas/P_2_01_Analisis_tiempo_frecuencia.ipynb
+++ b/practicas/P_2_01_Analisis_tiempo_frecuencia.ipynb
@@ -107,7 +107,7 @@
     "# La convolución de r(t) = u(t) y g(t) = 5*exp(-2t) es:\n",
     "# c(t) = 2.5 * (1 - exp(-2t))\n",
     "# Calculamos esta solución para compararla con la simulación.\n",
-    "c_dominio_s = 2.5 * (1 - np.exp(-2 * tiempo))"
+    "c_dominio_s = 2.5 * (1 - np.exp(-2 * tiempo))."
    ]
   },
   {
