--- a/practicas/P_2_01_Analisis_tiempo_frecuencia.ipynb
+++ b/practicas/P_2_01_Analisis_tiempo_frecuencia.ipynb
@@ -13,7 +13,7 @@
     "* **Dominio del Tiempo:** La salida $y(t)$ es la convolución de la entrada $r(t)$ con la respuesta al impulso $h(t)$.\n",
     "    $$ y(t) = r(t) * g(t) $$\n",
     "* **Dominio 's' (Laplace):** La transformada de la salida $Y(s)$ es el producto de la transformada de la entrada $R(s)$ y la función de transferencia $G(s)$.\n",
-    "    $$ Y(s) = R(s) \\cdot G(s) $$."
+    "    $$ Y(s) = R(s) \\cdot G(s) $$"
    ]
   },
   {
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "dc0d3654",
    "metadata": {},
    "outputs": [],
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "d0562edf",
    "metadata": {},
    "outputs": [
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "fa6ed48e",
    "metadata": {},
    "outputs": [],
@@ -279,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "420ec63e",
    "metadata": {},
    "outputs": [
